
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {void* s_addr; } ;
struct sockaddr_in {void* sin_port; int sin_zero; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct in_addr {void* s_addr; } ;
struct hostent {int dummy; } ;
typedef int sin ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 void* htonl (unsigned long) ;
 void* htons (int) ;
 unsigned long inet_addr (char*) ;
 char* inet_ntoa (struct in_addr) ;
 unsigned long ntohl (unsigned long) ;
 int printf (char*,char*) ;
 int snatch (int,char*) ;
 int socket (int ,int ,int ) ;
 int stdout ;
 int strcpy (char*,char*) ;

void main(int argc, char *argv[])
{
 int sock;
 struct in_addr addr;
 struct sockaddr_in sin;
 unsigned long start;
 unsigned long end;
 unsigned long counter;
 char buffer[1000];
 struct hostent *hp=((void*)0);
 unsigned long lAddr;
 char *p;
 char trash[16];

 if (argc!=3)
 {
  printf("\nusage : %s start-ip-address  end-ip-address\n\n",argv[0]);
  exit(0);
 }

 start=inet_addr(argv[1]);
 end=inet_addr(argv[2]);

 for (counter = ntohl(start); counter <= ntohl(end); counter++)
 {
  int jim=0, h=0;

  sock=socket(AF_INET, SOCK_STREAM, 0);
  if ((counter & 0xff) == 255) counter++;
  if ((counter & 0xff) == 0) counter++;

  sin.sin_family=AF_INET;
  sin.sin_port=htons(264);
  sin.sin_addr.s_addr=htonl(counter);
  addr.s_addr=htonl(counter);
  bzero(&(sin.sin_zero), 8);
  fprintf(stdout, "Checking: %s\n", inet_ntoa(addr));
  p=inet_ntoa(addr);
  strcpy(trash, p);
  jim=connect(sock, (struct sockaddr*)&sin, sizeof(sin));
  if (jim==0) {
 fprintf(stdout, "Port 264 open on %s -- Checkpoint Firewall-1 v4.1 or later.\n",inet_ntoa(addr));
 snatch(sock, trash);
    }
  else {
 fprintf(stdout, "Can not connect to %s on port 264\n\n", inet_ntoa(addr));
 sin.sin_port=htons(256);
 jim=0;
 jim=connect(sock, (struct sockaddr*)&sin, sizeof(sin));
 if (jim==0) {
  fprintf(stdout, "Port 256 open on %s -- Checkpoint Firewall-1 4.0 or earlier.\n",inet_ntoa(addr));
  snatch(sock, trash);
 }
 else {
  fprintf(stdout, "Can not connect to %s on port 256\n\n", inet_ntoa(addr));
 }
    }
  jim=0;
 }
}
